fix: safari siteeditor scrollbar style fix

--- a/packages/edit-site/src/components/sidebar-navigation-screen/style.scss
+++ b/packages/edit-site/src/components/sidebar-navigation-screen/style.scss
@@ -19,6 +19,7 @@
 .edit-site-sidebar-navigation-screen__content {
 	padding: 0 $grid-unit-30;
 	overflow: auto;
+	@include custom-scrollbars-on-hover(transparent, $gray-700);
 
 	.components-text {
 		color: $gray-400;
